--- a/demo1/pom.xml
+++ b/demo1/pom.xml
@@ -4,6 +4,17 @@
   <artifactId>demo1</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <dependencies>
+  <dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+    <version>3.141.59</version>
+</dependency>
   
+  <dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-lang3</artifactId>
+    <version>[4]</version>
+    
+</dependency>
   </dependencies>
 </project>
